--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "crypto-js": "^3.3.0",
     "react": "16.13.1",
-    "react-native": "0.63.3"
+    "react-native": "0.63.3",
+    "react-native-document-picker": "^4.1.0",
+    "react-native-fs": "^2.16.6",
+    "react-native-image-picker": "^2.3.4"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
