--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-native-fontawesome": "^0.2.6",
+    "@react-native-community/clipboard": "^1.5.1",
     "crypto-js": "^3.3.0",
     "react": "16.13.1",
     "react-native": "0.63.3",
     "react-native-document-picker": "^4.1.0",
     "react-native-fs": "^2.16.6",
-    "react-native-image-picker": "^2.3.4"
+    "react-native-image-picker": "^2.3.4",
+    "react-native-svg": "^12.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
